--- a/New-Car-Loan/src/app/shared/service/drawer/drawer.html
+++ b/New-Car-Loan/src/app/shared/service/drawer/drawer.html
@@ -42,11 +42,12 @@
         <div class="full-name-section">
           <label class="full-name-label">Full Name<span class="required">*</span></label>
           <input type="text" class="full-name-input" style="padding-left: 15px; padding-top: 10px;"
-            placeholder="Enter full name as per PAN card" [(ngModel)]="fullName" (input)="onFullNameInput($event)" pattern="[A-Za-z ]+">
+            placeholder="Enter full name as per PAN card" [(ngModel)]="fullName" (input)="onFullNameInput($event)" pattern="[A-Za-z ]+"
+            [class.highlight-autofill]="fullNameHighlight">
           @if (showNameError) {
             <div class="name-error-message">
-              <img src="/Frame 1707485144.svg" alt="Error" width="16" height="16">
-              <span>Please enter your full name to auto-fill details</span>
+              <img src="/Frame 1707485144.svg" alt="Error" width="14" height="14">
+              <span>Please enter your full name</span>
             </div>
           }
         </div>
@@ -73,7 +74,7 @@
           </div>
 
           <div class="security-box">
-            <img src="/Vector.svg" alt="Logo" class="brand-logo" width="24" height="24">
+            <img src="/Vector.svg" alt="Logo" class="brand-logo" >
             <p class="security-text">
               We guarantee your privacy by storing your information on secure servers for a maximum of
               30 days.
