--- a/New-Car-Loan/src/app/features/personal-details/components/personal-form/personal-form.css
+++ b/New-Car-Loan/src/app/features/personal-details/components/personal-form/personal-form.css
@@ -188,6 +188,22 @@ letter-spacing: 0px;
   background-color: #FFFFFF;
 }
 
+/* Highlight inputs while typing (focus state) */
+.form-control:focus {
+  background-color: rgba(255, 245, 218, 1);
+   border-color: #CCCCCC; 
+  outline: none;
+  transition: background-color 0.15s ease, border-color 0.15s ease;
+}
+.consent-item input[type="checkbox"]:focus,
+.consent-item input[type="checkbox"]:active {
+  outline: none !important;
+  border: none !important;
+  box-shadow: none !important;
+}
+
+
+
 /* Field group spacing */
 .form-field {
   display: flex;
