grey thick border fixed

--- a/New-Car-Loan/src/app/features/personal-details/components/personal-form/personal-form.html
+++ b/New-Car-Loan/src/app/features/personal-details/components/personal-form/personal-form.html
@@ -44,7 +44,7 @@
         Third Gender
       </label>
     </div>
-     @if (showErrors && !gender.trim()) {
+     @if (showErrors && !gender) {
     <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please select Gender</span></div>
     }
   </div>
