--- a/New-Car-Loan/src/app/features/personal-details/components/personal-form/personal-form.css
+++ b/New-Car-Loan/src/app/features/personal-details/components/personal-form/personal-form.css
@@ -187,6 +187,13 @@ letter-spacing: 0px;
   border-radius: 6px;
   background-color: #FFFFFF;
 }
+.form-control:focus {
+  border-color: #CCCCCC !important;     /* subtle border */
+  outline: none !important;             /* removes thick browser ring */
+  box-shadow: none !important;          /* removes glow or shadow */
+  transition: none !important;          /* disables animation if needed */
+}
+
 
 /* Highlight inputs while typing (focus state) */
 .form-control:focus {
