--- a/New-Car-Loan/src/styles.css
+++ b/New-Car-Loan/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+app-tracker .tracker-container {
+  padding-bottom: 0 !important;
+}
