--- a/New-Car-Loan/src/app/features/personal-details/components/personal-form/personal-form.css
+++ b/New-Car-Loan/src/app/features/personal-details/components/personal-form/personal-form.css
@@ -69,6 +69,17 @@ label {
   padding-right: 24px;
 }
 
+/* Chrome, Safari, Edge */
+input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
+
+/* Firefox */
+input[type="date"]::-moz-focus-inner {
+  border: 0;
+}
+
 .form-container button {
   margin-top: 1rem;
   padding: 0.75rem 2rem;
@@ -555,9 +566,10 @@ letter-spacing: 0px;
   padding-left: 16px;
   padding-right: 16px;
   margin-top: 18px;
-  margin-bottom: 0;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
-  
+  /* margin-bottom: 0; */
+  box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.1);
+  border-top: 1px solid #cccccce0;
+  border-bottom: none;
   /* display: flex; */
   flex-direction: column;
   align-items: center;
