--- a/New-Car-Loan/src/app/features/personal-details/components/personal-form/personal-form.html
+++ b/New-Car-Loan/src/app/features/personal-details/components/personal-form/personal-form.html
@@ -2,15 +2,9 @@
   <app-tracker></app-tracker>
 </div>
 <!-- Drawer overlay displayed initially -->
-<app-drawer 
-  [isOpen]="isDrawerOpen" 
-  [selectedOption]="selectedOption" 
-  [showError]="showError"
-  [isContentVisible]="isContentVisible" 
-  (close)="onDrawerClose()" 
-  (continue)="onDrawerContinue($event)"
-  (toggleContent)="onDrawerToggleContent()" 
-  (optionChange)="onDrawerOptionChange($event)">
+<app-drawer [isOpen]="isDrawerOpen" [selectedOption]="selectedOption" [showError]="showError"
+  [isContentVisible]="isContentVisible" (close)="onDrawerClose()" (continue)="onDrawerContinue($event)"
+  (toggleContent)="onDrawerToggleContent()" (optionChange)="onDrawerOptionChange($event)">
 </app-drawer>
 
 
@@ -44,15 +38,22 @@
         Third Gender
       </label>
     </div>
-     @if (showErrors && !gender) {
+    @if (showErrors && !gender) {
     <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please select Gender</span></div>
     }
   </div>
 
   <div class="form-field">
     <label for="dob-input">Date of Birth <span class="required">*</span></label>
-    <input type="text" class="form-control" id="dob-input" placeholder="Enter date of birth" [(ngModel)]="dob"
-      (focus)="($event.target.type='date')" (blur)="($event.target.type='text')" maxlength="10" pattern="\d{4}-\d{2}-\d{2}" (input)="onDobInput($event)">
+    <input type="text"
+       class="form-control"
+       id="dob-input"
+       placeholder="dd-mm-yyyy"
+       [(ngModel)]="dob"
+       maxlength="10"
+       pattern="\d{2}-\d{2}-\d{4}"
+       (input)="onDobInput($event)">
+
     @if (showErrors && !dob) {
     <div class="field-error"><img src="/Frame 1707485144.svg" alt="Error"><span>Please enter your date of birth</span>
     </div>
@@ -62,7 +63,7 @@
         apply</span></div>
     }
   </div>
-  
+
   <div class="form-field">
     <label for="pan-number-input">PAN Card Number <span class="required">*</span> <img src="/Vector copy.svg"
         alt="PAN info" class="pan-info-icon" /></label>
@@ -139,17 +140,17 @@
   <div class="consent-group">
     <div class="consent-item" [ngClass]="{'tnc-error': showErrors && !tncAccepted}">
       <input type="checkbox" [(ngModel)]="tncAccepted" (change)="onConsentChange()" />
-      <span>I have read, understood, and hereby accept the product 
+      <span>I have read, understood, and hereby accept the product
         <span class="terms-conditions">
-        <a target="_blank"
-          href="https://www.bajajfinserv.in/tnc-retail-lending" class="link">Terms and Conditions.</a></span></span>
-      </div>
+          <a target="_blank" href="https://www.bajajfinserv.in/tnc-retail-lending" class="link">Terms and
+            Conditions.</a></span></span>
+    </div>
     <hr>
     <div class="consent-item" [ngClass]="{'tnc-error': showErrors && !creditConsent}">
       <input type="checkbox" [(ngModel)]="creditConsent" (change)="onConsentChange()" />
       <span>I hereby consent to receiving my credit information offered by TransUnion CIBIL Limited (TU CIBIL)
         ("Product") through Bajaj Finance Limited (referred to as the "Agent").</span>
-      </div>
+    </div>
     <hr>
     <div class="consent-item optional">
       <input type="checkbox" [(ngModel)]="marketingOptIn" />
@@ -158,29 +159,26 @@
         deposit, loans, insurance and their respective products and/or services ("Products/Services") by telephone calls
         / SMSs / emails / WhatsApp / bitly/ Chatbots/ In-App Notifications or any other electronic modes.
         <em><b>(Optional)</b></em></span>
-      </div>
+    </div>
   </div>
 
 
 
 </div>
-  <div class="button-box-with-shadow">
-    @if (showErrors && hasAnyErrors()) {
-    <div class="error-summary">
-      <img src="/Frame 1707485144.svg" alt="Error" class="error-icon" />
-      @if (!tncAccepted || !creditConsent) {
-      <span>Please accept our terms and conditions to proceed.</span>
-      }
-      @if (tncAccepted && creditConsent) {
-      <span>There are errors on this screen</span>
-      }
-    </div>
+<div class="button-box-with-shadow">
+  @if (showErrors && hasAnyErrors()) {
+  <div class="error-summary">
+    <img src="/Frame 1707485144.svg" alt="Error" class="error-icon" />
+    @if (!tncAccepted || !creditConsent) {
+    <span>Please accept our terms and conditions to proceed.</span>
     }
-    <div class="button-row">
-      <button type="button" class="btn-outline" (click)="saveToCart()">SAVE TO CART</button>
-      <button type="button" class="btn-primary" (click)="onContinue()">CONTINUE</button>
-    </div>
+    @if (tncAccepted && creditConsent) {
+    <span>There are errors on this screen</span>
+    }
   </div>
-
-
-
+  }
+  <div class="button-row">
+    <button type="button" class="btn-outline" (click)="saveToCart()">SAVE TO CART</button>
+    <button type="button" class="btn-primary" (click)="onContinue()">CONTINUE</button>
+  </div>
+</div>
