feat: implement scroll management for vehicle and account pages

--- a/New-Car-Loan/src/app/features/vehicle-details/components/account-aggregator/account-aggregator.html
+++ b/New-Car-Loan/src/app/features/vehicle-details/components/account-aggregator/account-aggregator.html
@@ -1,11 +1,7 @@
 <div class="aa-wrapper">
     <div class="aa-card">
         <h1 class="aa-title">Your offer is being created</h1>
-        <div class="aa-anim" aria-hidden="true">
-            <div class="aa-doc doc-1"></div>
-            <div class="aa-doc doc-2"></div>
-            <div class="aa-doc doc-3"></div>
-        </div>
+        <img src="assets/Frame 1410089508.svg" alt="Loading animation" class="loader-svg">
         <p class="aa-subtitle">It usually takes a few seconds. We appreciate your patience.</p>
     </div>
 </div>
