--- a/New-Car-Loan/src/app/features/vehicle-details/components/account-aggregator/account-aggregator.html
+++ b/New-Car-Loan/src/app/features/vehicle-details/components/account-aggregator/account-aggregator.html
@@ -1,7 +1,8 @@
 <div class="aa-wrapper">
     <div class="aa-card">
         <h1 class="aa-title">Your offer is being created</h1>
-        <img src="assets/Frame 1410089508.svg" alt="Loading animation" class="loader-svg">
+        <img src="https://bflcodepush.bajajfinserv.in/bflfiles/assets/img/cal_loader.gif" alt="Loading animation"
+            class="loader-gif" />
         <p class="aa-subtitle">It usually takes a few seconds. We appreciate your patience.</p>
     </div>
 </div>
