--- a/New-Car-Loan/src/app/shared/components/tracker/tracker.html
+++ b/New-Car-Loan/src/app/shared/components/tracker/tracker.html
@@ -5,7 +5,7 @@
       <img [src]="getStepIcon(i)" [alt]="getStepIconAlt(i)" class="status-icon" [style.width.px]="getIconWidth(i)"
         [style.height.px]="getIconHeight(i)" />
     </div>
-    <div class="label">{{ step }}</div>
+    <div class="label" [innerHTML]="formatStepLabel(step)"></div>
     @if (i < steps.length - 1) { <div class="line" [class.line-active]="i < currentStep">
   </div>
   }
